# libarchive

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  build_docker.sh  test.sh  xplat_config.h
.github/workflows/: release.yaml
libarchive/: BUILD.bazel  config.h
libarchive_fe/: BUILD.bazel  config.h
rbe_platform/: BUILD
tar/: BUILD.bazel  bsdtar.c  config.h
