bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.0.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

bazel_dep(name = "xz", version = "5.4.5")
bazel_dep(name = "zlib", version = "1.3")
bazel_dep(name = "zstd", version = "1.5.5.bcr.1")
